chore(components): Add support for inset text in card component
This extends the card component to support the inclusion of the
GOV.UK Inset Text component.

This pattern will be used to display a message if the item in the card
is in particular states, for example, with an incomplete Person Escort
Record.

--- a/common/components/card/card.yaml
+++ b/common/components/card/card.yaml
@@ -126,3 +126,10 @@ examples:
         items:
         - text: Incomplete
         - text: Delayed
+  - name: with inset text
+    data:
+      title:
+        text: Card with inset text
+      insetText:
+        classes: govuk-inset-text--compact
+        text: A message about this card
